@@ -13,27 +13,11 @@
 
 class ezcomServerFunctions extends ezjscServerFunctions
 {
-    /**
-     *
-     */
-    public static function postComment()
-    {
-    }
 
     public static function userData()
     {
         unset( $_COOKIE['eZCommentsUserData'] );
-
-        $sessionID = session_id();
-        $userData = array();
-
-        $currentUser = eZUser::currentUser();
-
-        $userData[$sessionID] = array( 'email' => $currentUser->attribute( 'email' ),
-                                       'name' => $currentUser->attribute( 'login' ) );
-
-        setcookie( 'eZCommentsUserData', base64_encode( json_encode( $userData ) ), time()+3600, '/' );
-
-        return $userData;
+        $cookie = ezcomCookieManager::instance();
+        return $cookie->storeCookie();
     }
 }
